feat: update and clean
